--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  provider: ^5.0.0
-  dartz: ^0.10.0-nullsafety.2
-  equatable: ^2.0.2
-  google_fonts: ^2.1.0
+  provider: ^6.0.2
+  dartz: ^0.10.1
+  equatable: ^2.0.3
+  google_fonts: ^2.3.1
   flutter_rating_bar: ^4.0.0
-  cached_network_image: ^3.0.0
-  get_it: ^7.1.3
-  sqflite: ^2.0.0+3
-  path_provider: ^2.0.2
+  cached_network_image: ^3.2.0
+  get_it: ^7.2.0
+  sqflite: ^2.0.2
+  path_provider: ^2.0.8
   data_connection_checker:
     git:
       url: https://github.com/chornthorn/data_connection_checker.git
       ref: master
+  firebase_core: ^1.12.0
+  firebase_crashlytics: ^2.5.0
 
 dev_dependencies:
   mockito: ^5.0.8
