--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ target 'Runner' do
 
   # Pods for Runner
   # add the Firebase pod for Google Analytics
+  pod 'Firebase/Core'
   pod 'Firebase/Analytics'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
