--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,13 @@ dependencies:
       ref: master
   firebase_core: ^1.12.0
   firebase_crashlytics: ^2.5.0
+  flutter_bloc: ^8.0.1
+  rxdart: ^0.27.3
 
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
+  bloc_test: ^9.0.2
   flutter_test:
     sdk: flutter
 
