--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
 
 dev_dependencies:
   mockito: ^5.0.8
+  mocktail: ^0.2.0
   build_runner: ^2.0.4
   bloc_test: ^9.0.2
   flutter_test:
