--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_bloc: ^8.0.1
   rxdart: ^0.27.3
 
+  about:
+    path: about
+
 dev_dependencies:
   mockito: ^5.0.8
   mocktail: ^0.2.0
