--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,33 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.3
-  provider: ^6.0.2
-  dartz: ^0.10.1
-  equatable: ^2.0.3
-  google_fonts: ^2.3.1
-  flutter_rating_bar: ^4.0.0
-  cached_network_image: ^3.2.0
   get_it: ^7.2.0
-  sqflite: ^2.0.2
-  path_provider: ^2.0.8
-  data_connection_checker:
-    git:
-      url: https://github.com/chornthorn/data_connection_checker.git
-      ref: master
   firebase_core: ^1.12.0
   firebase_crashlytics: ^2.5.0
   flutter_bloc: ^8.0.1
-  rxdart: ^0.27.3
 
   about:
     path: about
+  core:
+    path: core
 
 dev_dependencies:
-  mockito: ^5.0.8
-  mocktail: ^0.2.0
-  build_runner: ^2.0.4
-  bloc_test: ^9.0.2
   flutter_test:
     sdk: flutter
 
