create search module

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   firebase_crashlytics: ^2.5.0
   flutter_bloc: ^8.0.1
 
-  about:
-    path: about
   core:
     path: core
+  about:
+    path: about
+  search:
+    path: search
 
 dev_dependencies:
   flutter_test:
