--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
     path: watchlist
   detail:
     path: detail
+  popular:
+    path: popular
 
 dev_dependencies:
   flutter_test:
