create home movie  module

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  google_fonts: ^2.3.1
+  http: ^0.13.3
+  dartz: ^0.10.1
+  flutter_rating_bar: ^4.0.0
+  cached_network_image: ^3.2.0
+  sqflite: ^2.0.2
+  data_connection_checker:
+    git:
+      url: https://github.com/chornthorn/data_connection_checker.git
+      ref: master
+  flutter_bloc: ^8.0.1
+  rxdart: ^0.27.3
   get_it: ^7.2.0
   firebase_core: ^1.12.0
   firebase_crashlytics: ^2.5.0
-  flutter_bloc: ^8.0.1
 
   core:
     path: core
+  home_movie:
+    path: home_movie
   about:
     path: about
   search:
@@ -51,6 +65,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.8
+  mocktail: ^0.2.0
+  build_runner: ^2.0.4
+  bloc_test: ^9.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
